# day19_objection-killer-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  cue_engine.py  db.py  detector.py  hub.py  main.py  models.py  stt.py
app/templates/: capture.html  dashboard.html
scripts/: seed_demo_data.py
tests/: test_cue_engine.py  test_detector.py
