[project]
name = "ai-live-sales-objection-killer-agent"
version = "0.1.0"
description = "Real-time sales objection detector and cue-card delivery system for live calls."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Team" }]
dependencies = [
  "aiohttp>=3.9.5",
  "aiosqlite>=0.20.0",
  "fastapi>=0.111.0",
  "jinja2>=3.1.4",
  "orjson>=3.10.6",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "structlog>=24.2.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.3"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.5"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
